# scp

./: .cursorrules  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
docs/: CODEBASE_REVIEW.md  README.md  agent-skills.md  client-discovery.md  client-local-fsm.md  dynamic-cli.md  quickstart.md  server-fetch-handler.md  stage-integrations.md  state-frame.md  streaming.md  visualizer.md
examples/ci-cd-bot/: package-lock.json  package.json  server.ts
examples/config-wizard/: README-CLI.md  app.py
examples/config-wizard-ts/: server.ts
examples/legal-review-flow/: app.py  requirements.txt
scripts/: check_openapi_sync.py
sdks/python/: Dockerfile  pyproject.toml  run.py
sdks/python/asmp/: __init__.py  client.py  llm.py  models.py  openapi.json  server.py  store.py
sdks/python/scp/: __init__.py  client.py  llm.py  models.py  openapi.json  server.py  store.py  visualize.py
sdks/python/swp/: __init__.py  client.py  models.py  server.py  store.py
sdks/typescript/: Dockerfile  package-lock.json  package.json
sdks/typescript/src/: backend-http.ts  client.ts  config.ts  handler.ts  index.ts  llm.ts  local.ts  models.ts  server.ts  (+3 more)
spec/: CLIENT_CONFIG.json  CLI_SCHEMA.json  PROTOCOL.md  SKILL_INTEGRATION.md  STAGE_INTEGRATIONS.md  STATE_FRAME.json  openapi.json
tests/python/: __init__.py  agent_app.py  test_agent_asmp.py  test_agent_scp.py  test_agent_swp.py  test_asmp.py  test_config_wizard_cli.py  test_example_business_logic.py  test_redis_stream.py  test_scp.py  test_swp.py
tests/typescript/: test_asmp.test.ts  test_scp.test.ts  test_swp.test.ts
(+6 files in other folders)
