[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swp-sdk"
version = "0.1.0"
description = "Stateful Workflow Protocol - Python SDK (server, client, LLM wrapper, visualizer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "pydantic>=2",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "httpx>=0.24", "openai>=1.0"]
redis = ["redis>=4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["swp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
